// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatPage.vue renders the user search results 1`] = `
<div role="list" class="v-list user-list pa-0 d-flex flex-column fill-height v-sheet theme--light">
  <div tabindex="-1" role="listitem" class="v-list-item v-list-item--dense theme--light">
    <div class="v-list-item__title">Results</div>
  </div>
  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
  <div class="user-list__items-container overflow-hidden flex">
    <div class="user-list__items-wrapper fill-height overflow-auto">
      <div>
        <div class="text--secondary text-center mt-3">No results to display</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage.vue renders the user search results 2`] = `
<div role="list" class="v-list user-list pa-0 d-flex flex-column fill-height v-sheet theme--light">
  <div tabindex="-1" role="listitem" class="v-list-item v-list-item--dense theme--light">
    <div class="v-list-item__title">Results</div>
  </div>
  <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
  <div class="user-list__items-container overflow-hidden flex">
    <div class="user-list__items-wrapper fill-height overflow-auto">
      <!---->
      <div tabindex="-1" role="listitem" class="user-list-item v-list-item theme--light">
        <div class="v-avatar v-list-item__avatar" style="height: 50px; min-width: 50px; width: 50px; background-color: rgb(170, 170, 170); border-color: #aaa;"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="d-flex justify-space-between">
            <div class="v-list-item__title">User 1</div> <span><div class="v-list-item__subtitle">Nov 8</div></span>
          </div>
          <!---->
        </div>
      </div>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <div tabindex="-1" role="listitem" class="user-list-item v-list-item theme--light">
        <div class="v-avatar v-list-item__avatar" style="height: 50px; min-width: 50px; width: 50px; background-color: rgb(170, 170, 170); border-color: #aaa;"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="d-flex justify-space-between">
            <div class="v-list-item__title">User 2</div> <span><div class="v-list-item__subtitle">Nov 8</div></span>
          </div>
          <!---->
        </div>
      </div>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <div tabindex="-1" role="listitem" class="user-list-item v-list-item theme--light">
        <div class="v-avatar v-list-item__avatar" style="height: 50px; min-width: 50px; width: 50px; background-color: rgb(170, 170, 170); border-color: #aaa;"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="d-flex justify-space-between">
            <div class="v-list-item__title">User 3</div> <span><div class="v-list-item__subtitle">Nov 8</div></span>
          </div>
          <!---->
        </div>
      </div>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    </div>
  </div>
</div>
`;
